<resources>
    <string name="app_name">포토네비</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="SignIn">로그인</string>
    <string name="forgotAccount">비밀번호 찾기</string>
    <string name="newAccount">새 계정 만들기</string>
</resources>
